<resources>
    <string name="app_name">Tepav</string>
    <string name="date">DD Month YYYY</string>
    <string name="time">HH:mm:ss</string>
    <string name="device_name">Device 00</string>
    <string name="default_notification_channel_id">channelMain</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</string>
    <string name="logout">Keluar</string>
    <string name="status">Status</string>
    <string name="tidak_ada_paket_hari_ini">Tidak ada paket hari ini.</string>
    <string name="belum_ada_perangkat_yang_terhubung">Belum ada perangkat yang terhubung.</string>
    <string name="copyright">Copyright Ⓒ Gradien.co - 2020</string>
    <string name="slogan">Tempat Paket Anti-Virus</string>
    <string name="proses_sterilisasi_selesai">Proses sterilisasi selesai</string>
    <string name="proses_sterilisasi_dimulai">Proses sterilisasi dimulai</string>
    <string name="paket_diterima">Paket diterima</string>
    <string name="sterilize_duration_minutes">Sterilize Duration (minutes)</string>
    <string name="save">Save</string>
    <string name="time_last">Time Last</string>
    <string name="last_connect">Last Connect</string>
    <string name="wifi_name">WIFI NAME</string>
    <string name="wifi_status">Wifi status</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="keterangan_login">Dengan ini, \nPaket kamu sudah aman kok, jadi gak usah risau. Paket kamu juga sudah steril loh, jadi kamu ga perlu takut lagi dengan virus yang hanya datang untuk menyakiti.\n~Tepav app</string>
</resources>