<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp">

        <RelativeLayout
            android:id="@+id/splashLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginVertical="10dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@color/colorPrimaryDark"/>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_tepav_control"
                android:tint="@color/colorWhite"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <TextView
            android:layout_below="@+id/splashLogo"
            android:id="@+id/tv_logo_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:fontFamily="@font/ubuntu_bold"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/tvSlogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textSize="16sp"
            android:layout_below="@id/tv_logo_nama"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textSize="14sp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        tools:ignore="SmallSp" />

</RelativeLayout>