<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/layoutPacket">

    <LinearLayout
        android:id="@+id/layoutListPack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="5dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp"
            android:outlineSpotShadowColor="@color/colorPrimaryDark"
            android:outlineAmbientShadowColor="@color/colorBlueAccent"
            tools:targetApi="p">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">
            <ImageView
                android:id="@+id/ic_pack"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pack" />

            <LinearLayout
                android:layout_toEndOf="@id/ic_pack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textPacketDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textAlignment="center"
                    android:maxWidth="120dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:fontFamily="@font/mulibold"/>
                <TextView
                    android:id="@+id/textPacketTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textAlignment="center"
                    android:maxWidth="120dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:fontFamily="@font/mulireg"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textPacketStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:layout_toStartOf="@id/ic_arrow_forward"
                android:layout_centerVertical="true"
                android:layout_marginEnd="6dp"/>

            <ImageView
                android:id="@+id/ic_arrow_forward"
                android:layout_marginHorizontal="8dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:tint="@color/colorBlack"
                android:maxHeight="20dp"
                android:maxWidth="20dp"
                android:src="@drawable/ic_arrow_forward"/>
        </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>